package com.example.stickhero;

public interface GameFeatures {

    public static void saveGame(int score, int cherries){

    }
    public void restartGame();
}

