package com.example.stickhero;

public class Stick {

    double length;

    public Stick(double length) {
        this.length = length;
    }

    public double getLength() {
        return length;
    }

    public void setLength(double length) {
        this.length = length;
    }

    public void extendStick(){

    }
}

